--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
-      href="https://raw.githubusercontent.com/iyarivky/sing-ribet-api/main/media/favicon-32x32.png"
+      href="/img/icon website.png"
       rel="icon"
       type="image/png"
     />
